--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -69,6 +69,9 @@ main{
      max-width: 1140px;
      margin: 0 auto;
 }
+.section{
+     margin-top: 130px;
+}
 /* about section styles */
 .about{
 margin-top: 130px;
@@ -78,11 +81,14 @@ padding: 130px 150px;
 text-align: center;
 }
 .section-title{
-margin-bottom: 30px;
+margin-bottom: 50px;
 font-weight: 700;
 font-size: 35px;
+text-align: center;
+margin: 20;
 }
 .section-description{
+     text-align: center;
      color: #757575;
      font-size: 18px;
      margin-bottom: 30px;
@@ -101,4 +107,83 @@ font-size: 35px;
      font-weight: 700;
      font-size: 20px;
      color: #474747;
+}
+
+/* what i do */
+.skills-container{
+     display: flex;
+     gap: 24px;
+}
+.skill{
+     background: #FFFFFF;
+     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+     border-radius: 5px;
+     padding: 30px;
+}
+.skill-title{
+     font-weight: 700;
+     font-size: 20px;
+     margin-top: 30px;
+     margin-bottom: 20px;
+}
+.section-title{
+     margin-top: 130px;
+     text-align: center;
+}
+.skill-description{
+     color: #757575;
+}
+
+/* Resume styles */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+     margin-top: 30px;
+     margin-bottom: 30px;
+}
+.resume .title{
+     font-weight: 700;
+     font-size: 25px;
+     color: #474747;
+     margin-bottom: 10px;
+}
+.resume .sub-title{
+     color: #757575;
+     font-weight: 600;
+     font-size: 20px;
+     margin-bottom: 20px;
+}
+.resume .description{
+     color: #757575;
+}
+.resume-button{
+     margin-top: 50px;
+     text-align: center;
+}
+
+/* contact styles */ 
+.contact{
+     display: flex;
+     gap: 100px;
+     background: #FFF8F3;
+     padding: 160px 200px;
+}
+.contact .section-title{
+     text-align: left;
+}
+
+.contact input[type="text"], input[type="email"] {
+    margin-bottom: 24px;
+     border: 0; 
+     width: 100%;
+   padding: 18px 30px;
+}
+
+input{
+     height: 64px;
+}
+.contact{
+     text-decoration: none;
 }
